--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,49 @@
 	<artifactId>memcached-ha</artifactId>
 	<version>beta-0.0.1</version>
 
+
+	<build>
+		<plugins>
+			<plugin>
+				<!-- 打源代码包 -->
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.1.2</version>
+				<configuration>
+					<archive>
+						<manifestFile>src/main/java/META-INF/MANIFEST.MF</manifestFile>
+						<manifest>
+							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+							<!-- <mainClass>com.someclass.Main</mainClass> <packageName>com.someclass</packageName> -->
+						</manifest>
+						<manifestEntries>
+							<Bundle-ManifestVersion>2</Bundle-ManifestVersion>
+							<Bundle-Name>${project.name}</Bundle-Name>
+							<Bundle-SymbolicName>${project.artifactId}.source</Bundle-SymbolicName>
+							<Bundle-Vendor>${project.organization.name}</Bundle-Vendor>
+							<Bundle-Version>${project.version}</Bundle-Version>
+							<Eclipse-SourceBundle>${project.artifactId};version="${project.version}";roots:="."</Eclipse-SourceBundle>
+						</manifestEntries>
+					</archive>
+				</configuration>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+						<configuration>
+							<encoding>${project.build.sourceEncoding}</encoding>
+							<excludeResources>false</excludeResources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+
+	</build>
+
 	<dependencies>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
